--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "react-scroll": "^1.8.7",
     "react-simple-typewriter": "^2.0.5",
     "sass": "^1.51.0",
+    "styled-components": "^5.3.5",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
